Bug 392512, panel doesn't open when opened from a menu, r+sr=bz,a=dbaron